# eyelevel-meeting-summarizer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROCESS.md  README.md  SYSTEM_PROMPT.md
backend/: pyproject.toml
backend/app/: analyze.py  config.py  export_docx.py  main.py  prompts.py  schemas.py  transcribe.py
backend/tests/: test_analyze.py
frontend/: package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx
frontend/src/components/: ActionItemsCard.tsx  DecisionsCard.tsx  OpenQuestionsCard.tsx  ParticipantsCard.tsx  Progress.tsx  Results.tsx  SummaryCard.tsx  TranscriptCard.tsx  Upload.tsx
frontend/src/lib/: api.ts  types.ts
