[project]
name = "eyelevel-meeting-summarizer-backend"
version = "0.1.0"
description = "FastAPI backend for the meeting summarizer take-home."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "openai>=1.54",
    "anthropic>=0.39",
    "python-docx>=1.1",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
